improvements to homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- ThreeDeeWorld library -->
     <script type="text/javascript" src="https://raw.github.com/adamschwartz/threedeeworld/master/jquery.threeDeeWorld.js"></script>
 
-    <link href="https://raw.github.com/adamschwartz/threedeeworld/master/example/example.css" rel="stylesheet" type="text/css" />
+    <link href="home.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
         $(function(){
             $('#viewport').threeDeeWorld({
