more improvements to the homepage

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div id="world">
             <h1>ThreeDeeWorld</h1>
             <ul>
-                <li><a href="https://github.com/adamschwartz/threedeeworld/zipball/master">Download <strong>ZIP File</strong></a></li>
-                <li><a href="https://github.com/adamschwartz/threedeeworld/tarball/master">Download <strong>TAR Ball</strong></a></li>
+                <li>Click me...</li>
                 <li><a href="https://github.com/adamschwartz/threedeeworld">View On <strong>GitHub</strong></a></li>
-                <p>This project is maintained by <a href="https://github.com/adamschwartz">adamschwartz</a></p>
+                <li>Download: <a href="https://github.com/adamschwartz/threedeeworld/zipball/master"><strong>ZIP File</strong></a> or <a href="https://github.com/adamschwartz/threedeeworld/tarball/master"><strong>TAR Ball</strong></a></li>
+                <li>Maintained by <a href="https://github.com/adamschwartz">adamschwartz</a></li>
             </ul>
         </div>
     </div>
