--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
 
     <!-- ThreeDeeWorld library -->
-    <script type="text/javascript" src="https://raw.github.com/adamschwartz/threedeeworld/master/jquery.threeDeeWorld.js"></script>
+    <script type="text/javascript" src="jquery.threeDeeWorld.js"></script>
 
     <link href="home.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
@@ -28,7 +28,7 @@
             <ul>
                 <li>Click me...</li>
                 <li><a href="https://github.com/adamschwartz/threedeeworld">View On <strong>GitHub</strong></a></li>
-                <li>Download: <a href="https://github.com/adamschwartz/threedeeworld/zipball/master"><strong>ZIP File</strong></a> or <a href="https://github.com/adamschwartz/threedeeworld/tarball/master"><strong>TAR Ball</strong></a></li>
+                <li>Download: <a href="https://github.com/adamschwartz/threedeeworld/zipball/gh-pages"><strong>ZIP File</strong></a> or <a href="https://github.com/adamschwartz/threedeeworld/tarball/master"><strong>TAR Ball</strong></a></li>
                 <li>Maintained by <a href="https://github.com/adamschwartz">adamschwartz</a></li>
             </ul>
         </div>
