--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>ThreeDeeWorld Home</title>
 
     <!-- Dependencies -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
 
     <!-- ThreeDeeWorld library -->
     <script type="text/javascript" src="jquery.threeDeeWorld.js"></script>
